# netspeak4-application-ngrams

./: .clang-format  .gitattributes  .gitignore  BigHashMap_8hpp.html  BigHashMap_8hpp.js  BigHashMap_8hpp__dep__incl.map  BigHashMap_8hpp__dep__incl.md5  BigHashMap_8hpp__incl.map  BigHashMap_8hpp__incl.md5  BigHashMap_8hpp_source.html  BuildCommand_8cpp.html  BuildCommand_8cpp__incl.map  BuildCommand_8cpp__incl.md5  BuildCommand_8cpp_source.html  BuildCommand_8hpp.html  BuildCommand_8hpp.js  BuildCommand_8hpp__dep__incl.map  BuildCommand_8hpp__dep__incl.md5  BuildCommand_8hpp__incl.map  BuildCommand_8hpp__incl.md5  BuildCommand_8hpp_source.html  Builder_8hpp.html  Builder_8hpp.js  Builder_8hpp__dep__incl.map  Builder_8hpp__dep__incl.md5  Builder_8hpp__incl.map  Builder_8hpp__incl.md5  Builder_8hpp_source.html  ByteBuffer_8cpp.html  ByteBuffer_8cpp__incl.map  ByteBuffer_8cpp__incl.md5  ByteBuffer_8cpp_source.html  ByteBuffer_8hpp.html  ByteBuffer_8hpp.js  ByteBuffer_8hpp__dep__incl.map  ByteBuffer_8hpp__dep__incl.md5  ByteBuffer_8hpp__incl.map  ByteBuffer_8hpp__incl.md5  ByteBuffer_8hpp_source.html  CMakeLists.txt  (+4472 more)
.github/workflows/: builddocs.yml  publish.yml  tests.yml
bindings/python/: CMakeLists.txt
bindings/python/src/py/: QueryParser.cpp
docs/: deployment.md  developers.md  netspeakcli.md
docs/developers/: bindings.md  getting-started.md  specification.md
include/antlr4/: QueryErrorHandler.hpp  parse.hpp
include/cli/: BuildCommand.hpp  Command.hpp  Commands.hpp  ProxyCommand.hpp  RegexCommand.hpp  ServeCommand.hpp  ShellCommand.hpp  StressCommand.hpp  logging.hpp  util.hpp
include/netspeak/: Configuration.hpp  Dictionaries.hpp  Netspeak.hpp  PhraseCorpus.hpp  PhraseDictionary.hpp  PhraseFileParser.hpp  PhraseFileReader.hpp  Properties.hpp  QueryNormalizer.hpp  QueryProcessor.hpp  RetrievalStrategy.hpp  RetrievalStrategy3.hpp  error.hpp  indexing.hpp
include/netspeak/bighashmap/: BigHashMap.hpp  Builder.hpp  CmphMap.hpp  ExternalMap.hpp  InternalMap.hpp
include/netspeak/invertedindex/: ByteBuffer.hpp  Configuration.hpp  IndexStrategy.hpp  Indexer.hpp  InvertedFileReader.hpp  InvertedFileWriter.hpp  Iterator.hpp  ManagedIndexer.hpp  Postlist.hpp  PostlistBuilder.hpp  PostlistReader.hpp  PostlistSorter.hpp  Properties.hpp  RawIndexer.hpp  RawPostlist.hpp  RawSearcher.hpp  Record.hpp  RecordReader.hpp  Searcher.hpp  SortedInput.hpp  StorageReader.hpp  StorageWriter.hpp  UnsortedInput.hpp
include/netspeak/model/: LengthRange.hpp  NormQuery.hpp  Phrase.hpp  Query.hpp  QuerySyntax.hpp  README.md  RawPhraseResult.hpp  RawRefResult.hpp  RawResult.hpp  SearchOptions.hpp  SearchResult.hpp  SimpleQuery.hpp  Words.hpp  documentation.dox  typedefs.hpp
include/netspeak/regex/: DefaultRegexIndex.hpp  README.md  RegexIndex.hpp  RegexQuery.hpp  documentation.dox  parsers.hpp
include/netspeak/service/: LoadBalanceProxy.hpp  RequestLogger.hpp  UniqueMap.hpp  tracking.hpp
include/netspeak/util/: ChainCutter.hpp  Config.hpp  FileDescriptor.hpp  JsonWriter.hpp  LfuCache.hpp  Math.hpp  Mut.hpp  PropertiesFormat.hpp  README.md  StringIdMap.hpp  Vec.hpp  check.hpp  checksum.hpp  conversion.hpp  documentation.dox  exception.hpp  glob.hpp  lockable.hpp  logging.hpp  memory.hpp  service.hpp  std_path_formatter.hpp  string.hpp  systemio.hpp  traceable_error.hpp
include/netspeak/value/: big_string.hpp  big_string_traits.hpp  pair.hpp  pair_traits.hpp  quadruple.hpp  quadruple_traits.hpp  quintuple.hpp  quintuple_traits.hpp  sextuple.hpp  sextuple_traits.hpp  string_traits.hpp  triple.hpp  triple_traits.hpp  value_traits.hpp
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_10.js  classes_11.js  classes_12.js  classes_13.js  classes_14.js  classes_15.js  classes_16.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  (+143 more)
src/: CMakeLists.txt
src/antlr4/: QueryErrorHandler.cpp  parse.cpp
src/cli/: BuildCommand.cpp  Commands.cpp  ProxyCommand.cpp  RegexCommand.cpp  ServeCommand.cpp  ShellCommand.cpp  StressCommand.cpp  logging.cpp  util.cpp
src/netspeak/: Configuration.cpp  Dictionaries.cpp  Netspeak.cpp  PhraseCorpus.cpp  Properties.cpp  QueryNormalizer.cpp  error.cpp  indexing.cpp
src/netspeak/invertedindex/: ByteBuffer.cpp  Properties.cpp
src/netspeak/model/: LengthRange.cpp  NormQuery.cpp  Phrase.cpp  Query.cpp  RawRefResult.cpp  RawResult.cpp  SimpleQuery.cpp  Words.cpp
src/netspeak/regex/: DefaultRegexIndex.cpp  RegexQuery.cpp  parsers.cpp
src/netspeak/service/: LoadBalanceProxy.cpp  RequestLogger.cpp  UniqueMap.cpp  tracking.cpp
src/netspeak/util/: Config.cpp  FileDescriptor.cpp  PropertiesFormat.cpp  glob.cpp  logging.cpp  service.cpp  string.cpp
tests/: CMakeLists.txt
tests/data/: .gitignore
tests/netspeak/: ManagedDirectory.hpp  paths.hpp  test_ChainCutter.cpp  test_LfuCache.cpp  test_Netspeak.cpp  test_PhraseCorpus.cpp  test_PropertiesFormat.cpp  test_QueryParser.cpp  test_normalization.cpp  test_parse.cpp  test_phrase.cpp  test_regex.cpp
tests/netspeak/bighashmap/: test_big_hash_map.cpp  test_value_traits.cpp
tests/netspeak/invertedindex/: test_Indexer.cpp  test_InvertedFileReader.cpp  test_ManagedIndexer.cpp  test_PostlistReader.cpp
